modules/ingress-alb-cname/assets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: ${acm_cert_arn}
    alb.ingress.kubernetes.io/healthcheck-path: ${healthcheck_path}
    alb.ingress.kubernetes.io/listen-ports: |
      [{"HTTP": 80}, {"HTTPS":443}]
    alb.ingress.kubernetes.io/scheme: ${alb_scheme}
    alb.ingress.kubernetes.io/success-codes: ${success_codes}
    kubernetes.io/ingress.class: alb
  name: ${ingress_name}
  namespace: ${kubernetes_namespace}
spec:
  rules:
  - host: ${app_host}
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ${nodeport_name}
            port:
              number: ${nodeport_number}
        pathType: ImplementationSpecific
